# xrworkout_outreach_monitor

./: .env.example  .gitignore  AGENTS.md  GIT_PROTOCOL.md  README.md  TASKS.md  llm_policy.json  ollama_suggestions.md  pyproject.toml
.github/workflows/: clean-automatic-start.yml  (+7 more)
dashboard/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
docs/: candidate-scoring.md  outreach-design.md  runbook.md  secrets.md
prompts/: community_intro.md  creator_email.md  follow_up.md  relevant_thread_reply.md
scripts/: check_codex_cli.py  check_ollama_cloud.py  classify_opportunities.py  collect_apify_conversations.py  collect_apify_creators.py  collect_apify_social.py  collect_blogs.py  collect_forums.py  collect_reddit.py  collect_reddit_rss.py  collect_twitch.py  collect_youtube.py  discover_creators.py  enrich_creator_profiles.py  generate_draft_for_opportunity.py  generate_drafts.py  list_due_followups.py  push_remotes.sh  reset_outreach_data.py  save_checkpoint.sh  send_approved.py  weekly_report.py
supabase/: schema.sql
tests/: test_apify.py  test_collect_reddit_rss.py  test_collect_youtube.py  test_conversation_sources.py  test_creator_scoring.py  test_db.py  test_dedupe.py  test_discover_creators.py  test_generate_draft_for_opportunity.py  test_list_due_followups.py  test_llm.py  test_profile_enrichment.py  test_rules.py  test_send_approved.py  test_weekly_report.py
xroutreach/: __init__.py  apify.py  config.py  conversation_sources.py  creator_scoring.py  db.py  dedupe.py  emailer.py  llm.py  profile_enrichment.py  rules.py
(+46 files in other folders)
